2 commit - теперь у некоторых блоков сохраняются style

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@uppy/react": "^5.2.0",
     "clsx": "^2.1.1",
     "cn": "^0.1.1",
+    "docshift": "^0.0.73",
     "lucide": "^0.575.0",
     "mammoth": "^1.11.0",
     "next": "16.1.6",
